--- a/templates/org.slicer.Slicer.yaml
+++ b/templates/org.slicer.Slicer.yaml
@@ -26,6 +26,5 @@ modules:
         url: https://github.com/Slicer/Slicer.git
         tag: main
       - type: patch
-        path: patches/01-ENH-Disable-https-check.patch
-      - type: git
-        url: https://github.com/commontk/bzip2
+        path: 01-ENH-Disable-https-check.patch
+      <SLICER_DEPENDENCIES>
