ENH: Add patch for exposing CTKAppLauncher sources
This adds the patches neede to expose the CTKAppLauncher archive
sources. This addresses RafaelPalomar/org.slicerSlicer#2

--- a/templates/org.slicer.Slicer.yaml
+++ b/templates/org.slicer.Slicer.yaml
@@ -34,5 +34,7 @@ modules:
         path: 02-ENH-Disable-git-submodules-in-RapidJSON.cmake
       - type: patch
         path: 03-ENH-Make-OpenSSL-sources-visible.patch
+      - type: patch
+        path: 04-ENH-Make-CTKAppLauncher-sources-available.patch
       <SLICER_GIT_DEPENDENCIES> # Template tag for inserting actual Slicer dependencies (git)
       <SLICER_ARCHIVE_DEPENDENCIES> # Template tag for inserting actual Slicer dependencies (Archive files)
