ENH: Improvements for integration / extensions

--- a/org.slicer.Slicer.desktop
+++ b/org.slicer.Slicer.desktop
@@ -3,7 +3,7 @@ Version=1.0
 Name=3D Slicer
 Type=Application
 Terminal=false
-Exec=Slicer
-Icon=org.slicer.Slicer.png
+Exec=/app/Slicer/Slicer
+Icon=org.slicer.Slicer
 Categories=Viewer;MedicalSoftware;Graphics;Engineering;
 MimeType=application/dicom;
